# treehacks-2025

./: LICENSE  README.md  Untitled Diagram.drawio  index.html  package-lock.json  package.json  tailwind.config.ts
blockchain/: hardhat.config.ts  package-lock.json  package.json
blockchain/api/: company-mock-api.ts  server.ts
blockchain/contracts/: PrivateDataAggregator.sol
blockchain/scripts/: deploy.ts  listener.ts  test-aggregation.ts  test-external-data.ts  verify-request.ts
ciphertext-landing/src/components/: ParticleBackground.tsx
ciphertext-landing/src/pages/: CompanySignup.tsx  SurveyCreation.tsx
diagrams/: Untitled Diagram.drawio
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: embed-example.html  index.html
frontend/src/: index.js
frontend/src/components/: AggregationButton.tsx  Header.tsx  SecureForm.css  SecureForm.jsx  SecurityInfo.tsx
frontend/src/components/health-form/: AdditionalHealthInfo.tsx  BasicHealthInfo.tsx  SecurityInfo.tsx
frontend/src/components/worknight/: CSVViewer.tsx  DemographicInsights.tsx  QuickActions.tsx  StatsCard.tsx
frontend/src/constants/: loanVectorMappings.ts  selfIdentificationVectors.ts  vectorMappings.ts
frontend/src/pages/: Admin.tsx  Form.tsx  TrustedLoansAdmin.tsx  WorkNight.tsx  WorkNightAdmin.tsx
frontend/src/utils/: encryption.js
frontend/supabase/: config.toml
mental-health-platform/: package-lock.json  package.json
mental-health-platform/src/app/: page.tsx
mental-health-platform/src/app/form/: page.tsx
mental-health-platform/src/app/register/: page.tsx
mental-health-platform/src/components/: SecureForm.tsx
mental-health-platform/src/utils/: encryption.ts
multiparty-fhe/: CMakeLists.txt
multiparty-fhe/include/: shared_params.h
multiparty-fhe/src/: client.cpp  client_api.cpp  server.cpp  test.cpp
src/: App.tsx  index.css
src/components/: Header.tsx  ParticleBackground.tsx  SecurityInfo.tsx  WorkflowSection.tsx
src/components/health-form/: BasicHealthInfo.tsx  SecurityInfo.tsx
src/components/worknight/: DemographicInsights.tsx  StatsCard.tsx
src/integrations/supabase/: client.ts  types.ts
src/pages/: Admin.tsx  CompanySignup.tsx  Index.tsx  TrustedLoans.tsx  TrustedLoansAdmin.tsx  WorkNight.tsx  WorkNightAdmin.tsx
src/types/: form.ts
